--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,5 +1,10 @@
-{% include 'recipes/partials/head.html' %}
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+        {% include 'recipes/partials/head.html' %}
+    <title>{% block title %}{% endblock title %} Recipes</title>
+</head>
 <body>
       {% include 'recipes/partials/header.html' %}
       {% include 'recipes/partials/search.html' %}
